--- a/templates/search_form.html
+++ b/templates/search_form.html
@@ -103,3 +103,5 @@
   <p><input type="submit" value="Search">
   </p>
 </form>
+
+<p><a href="/trivia">Další zajímvavé údaje z obchodního resjtříku.</a></p>
