--- a/templates/trivia.html
+++ b/templates/trivia.html
@@ -3,11 +3,12 @@
 <h1>Zajímavosti z rejstříku</h1>
 
 <p>Počet registrovaných osob: {{ number_entities }}</p>
-
 <p>Další zajímvavé údaje z obchodního resjtříku:</p>
 <p><a href="/most_common_addresses">Seznam nejčastějších sídel</a></p>
 <p><a href="/oldest_companies">Seznam nejstarších společností</a></p>
 <p><a href="/most_common_purpose">Seznam nejčastějších účelů</a></p>
+<p><a href="/most_common_business">Seznam nejčastějších předmětů podnikání</a></p>
+<p><a href="/most_common_activity">Seznam nejčastějších předmětů činnosti</a></p>
 
 
 {% include 'footer.html' %}
