--- a/templates/oldest_companies.html
+++ b/templates/oldest_companies.html
@@ -1,9 +1,9 @@
 {% include 'header.html' %}
 
 <h1>Nejstarší společnosti:</h1>
-<table class="table table-hover">
+<table class="table table-hover" style="width: auto">
     <thead class="thead-dark">
-    <tr>
+    <tr class="table-info">
         <th scope="col">#</th>
         <th scope="col">Jméno</th>
         <th scope="col">Datum založení</th>
