--- a/templates/results2.html
+++ b/templates/results2.html
@@ -1,6 +1,8 @@
 {% include 'header.html' %}
 
-{% include 'search_form.html' %}
+{% if show_form == True %}
+    {% include 'search_form.html' %}
+{% endif %}  
 
     <p><b>Počet nalezených subjektů: {{ results|length }}</b></p>
     {% for row in results %}
