--- a/templates/oldest_companies.html
+++ b/templates/oldest_companies.html
@@ -1,11 +1,11 @@
 {% include 'header.html' %}
 
-<h1>Nejstarší společnosti:</h1>
+<h1>Nejstarší právnické osoby:</h1>
 <table class="table table-hover" style="width: auto">
     <thead class="thead-dark">
     <tr class="table-info">
         <th scope="col">#</th>
-        <th scope="col">Jméno</th>
+        <th scope="col">Název</th>
         <th scope="col">Datum založení</th>
     </tr>
     </thead>
