--- a/templates/search_form.html
+++ b/templates/search_form.html
@@ -1,3 +1,4 @@
+{% include 'header.html' %}
 <title>Justice Database</title>
 
 <h2>Justice Database</h2>
@@ -105,3 +106,4 @@
 </form>
 
 <p><a href="/trivia">Další zajímvavé údaje z obchodního resjtříku.</a></p>
+{% include 'footer.html' %}
