--- a/templates/results_persons.html
+++ b/templates/results_persons.html
@@ -1,24 +1,85 @@
-{% include 'header.html' %}
-
 {% if show_form == True %}
     {% include 'search_form_person.html' %}
+{% else %}
+    {% include 'header.html' %}
 {% endif %}  
 
 <p><b>Počet nalezených osob: {{ results|length }}</b></p>
-
-{% set count = namespace(value=0) %}
-{% for row in results %}
-<p>{{ row }} {{ row.statut_org_association }} 
-    {% for elem in row.spolecnik_association %}
-        {{ elem.company.nazev }} {{ elem.adresa }}
-    {% endfor %}
-    </p>
+{% set count = namespace(value=0) %} 
+    {% for row in results %}
+    {% set test_list = [] %}
     {% for elem in row.statut_org_association %}
+        {% set my_dict = {} %}
+        {% set x = my_dict.__setitem__("adresa", elem.adresa) %}
+        {% set x = my_dict.__setitem__("funkce", elem.funkce) %}
+        {% set x = my_dict.__setitem__("nazev", elem.statutarni_organ.company.nazev) %}
+        {% set x = my_dict.__setitem__("ico", elem.statutarni_organ.company.ico) %}
+        {% set x = my_dict.__setitem__("oddil", elem.statutarni_organ.company.oddil) %}
+        {% set x = my_dict.__setitem__("vlozka", elem.statutarni_organ.company.vlozka) %}
+        {% set x = my_dict.__setitem__("soud", elem.statutarni_organ.company.soud) %}
+        {% set x = my_dict.__setitem__("zapis", elem.statutarni_organ.company.zapis) %}
+        {% set test_list = test_list.append(my_dict) %}
+    {% endfor %}
+
+    {% for elem in row.supervisory_board_member_association %}
+        {% set my_dict = {} %}
+        {% set x = my_dict.__setitem__("adresa", elem.adresa) %}
+        {% set x = my_dict.__setitem__("funkce", elem.funkce) %}
+        {% set x = my_dict.__setitem__("nazev", elem.dozorci_rada.company.nazev) %}
+        {% set x = my_dict.__setitem__("ico", elem.dozorci_rada.company.ico) %}
+        {% set x = my_dict.__setitem__("oddil", elem.dozorci_rada.company.oddil) %}
+        {% set x = my_dict.__setitem__("vlozka", elem.dozorci_rada.company.vlozka) %}
+        {% set x = my_dict.__setitem__("soud", elem.dozorci_rada.company.soud) %}
+        {% set x = my_dict.__setitem__("zapis", elem.dozorci_rada.company.zapis) %}
+        {% set test_list = test_list.append(my_dict) %}
+    {% endfor %}    
+
+    {% for elem in row.spolecnik_association %}
+        {% set my_dict = {} %}
+        {% set x = my_dict.__setitem__("adresa", elem.adresa) %}
+        {% set x = my_dict.__setitem__("funkce", "společník") %}
+        {% set x = my_dict.__setitem__("nazev", elem.company.nazev) %}
+        {% set x = my_dict.__setitem__("ico", elem.company.ico) %}
+        {% set x = my_dict.__setitem__("oddil", elem.company.oddil) %}
+        {% set x = my_dict.__setitem__("vlozka", elem.company.vlozka) %}
+        {% set x = my_dict.__setitem__("soud", elem.company.soud) %}
+        {% set x = my_dict.__setitem__("zapis", elem.company.zapis) %}
+        {% set test_list = test_list.append(my_dict) %}
+    {% endfor %}    
+
+    {% for elem in row.sole_shareholder_association %}
+        {% set my_dict = {} %}
+        {% set x = my_dict.__setitem__("adresa", elem.adresa) %}
+        {% set x = my_dict.__setitem__("funkce", "jediný akcionář") %}
+        {% set x = my_dict.__setitem__("nazev", elem.company.nazev) %}
+        {% set x = my_dict.__setitem__("ico", elem.company.ico) %}
+        {% set x = my_dict.__setitem__("oddil", elem.company.oddil) %}
+        {% set x = my_dict.__setitem__("vlozka", elem.company.vlozka) %}
+        {% set x = my_dict.__setitem__("soud", elem.company.soud) %}
+        {% set x = my_dict.__setitem__("zapis", elem.company.zapis) %}
+        {% set test_list = test_list.append(my_dict) %}
+    {% endfor %}
+    
+    {% for elem in row.prokurista_association %}
+        {% set my_dict = {} %}
+        {% set x = my_dict.__setitem__("adresa", elem.adresa) %}
+        {% set x = my_dict.__setitem__("funkce", "prokurista") %}
+        {% set x = my_dict.__setitem__("nazev", elem.company.nazev) %}
+        {% set x = my_dict.__setitem__("ico", elem.company.ico) %}
+        {% set x = my_dict.__setitem__("oddil", elem.company.oddil) %}
+        {% set x = my_dict.__setitem__("vlozka", elem.company.vlozka) %}
+        {% set x = my_dict.__setitem__("soud", elem.company.soud) %}
+        {% set x = my_dict.__setitem__("zapis", elem.company.zapis) %}
+        {% set test_list = test_list.append(my_dict) %}
+    {% endfor %}    
+
+    {% for elem in test_list %}
         {% if count.value % 2 == 0 %}
             {% set table_style = "table table-light" %}
         {% else %}
             {% set table_style = "table table-secondary" %}
         {% endif %}
+
         <table class= "{{table_style}}" style="width: 100%">
             <p></p>
             <tr>
@@ -37,16 +98,16 @@
 
             <tr>
                 <td>Název subjektu:</td>
-                <td><b>{{ elem.statutarni_organ.company.nazev }}</b></td>
+                <td><b>{{ elem.nazev }}</b></td>
                 <td>IČO:</td>
-                <td><a href="/{{ elem.statutarni_organ.company.ico }}"><b>{{ elem.statutarni_organ.company.ico }}</b></a></td>
+                <td><a href="/{{ elem.ico }}"><b>{{ elem.ico }}</b></a></td>
             </tr>
 
             <tr>
                 <td>Spisová značka:</td>
-                <td>{{elem.statutarni_organ.company.oddil}} {{elem.statutarni_organ.company.vlozka}} vedená u {{elem.statutarni_organ.company.soud}}</td>
+                <td>{{elem.oddil}} {{elem.vlozka}} vedená u {{elem.soud}}</td>
                 <td>Den zápisu:</td>
-                <td>{{elem.statutarni_organ.company.zapis}}</td>
+                <td>{{elem.zapis}}</td>
             </tr>
 
         </table>
