--- a/templates/trivia.html
+++ b/templates/trivia.html
@@ -9,6 +9,6 @@
 <p><a href="/most_common_purpose">Seznam nejčastějších účelů</a></p>
 <p><a href="/most_common_business">Seznam nejčastějších předmětů podnikání</a></p>
 <p><a href="/most_common_activity">Seznam nejčastějších předmětů činnosti</a></p>
-
+<p><a href="/most_common_degree">Seznam nejčastějších titulů</a></p>
 
 {% include 'footer.html' %}
