work in progress on entity search in company role

--- a/templates/header.html
+++ b/templates/header.html
@@ -13,7 +13,7 @@
   <tr>
     <td><a href="/">Veřejný rejstřík podle subjektů</a></td>
     <td><a href="/osoby">Veřejný rejstřík podle fyzických osob v angažmá</a></td>
-    <td>Veřejný rejstřík podle právnických osob v angažmá (coming soon)</td>
+    <td><a href="/entity">Veřejný rejstřík podle právnických osob v angažmá</a></td>
     <td><a href="/trivia">Zajímavosti z obchodního rejstříku</a></td>
   </tr>
 </table>
