--- a/templates/search_form_entity.html
+++ b/templates/search_form_entity.html
@@ -22,42 +22,32 @@
 <form method="post">
     <div class="row g-2">
       <div class="col-sm-3">
-        {{ form.fist_name_search.label }}
+        {{ form.entity_name_search.label }}
       </div>
       <div class="col-sm">
-        {{ form.fist_name_search()|safe }} {{ form.fist_name_search_selection }}
+        {{ form.entity_name_search()|safe }} {{ form.entity_name_search_selection }} {{ form.entity_name_search_actual }} 
       </div>
     </div>
 
-<!-- SURNAME -->
+<!-- ID No. -->
     <div class="row g-2">
       <div class="col-sm-3">
-        {{ form.surname_search.label }}
+        {{ form.entity_number_search.label }}
       </div>
       <div class="col-sm">
-        {{ form.surname_search()|safe }} {{ form.surname_search_selection }}
+        {{ form.entity_number_search()|safe }} {{ form.entity_number_search_selection }} {{ form.entity_number_search_actual }} 
       </div>
     </div>
 
-<!-- BIRTHDAY -->    
+<!-- Foreign ID No. -->
     <div class="row g-2">
-      <div class="col-sm-3">
-        {{ form.birthday.label }}
+        <div class="col-sm-3">
+          {{ form.foreign_entity_number_search.label }}
+        </div>
+        <div class="col-sm">
+          {{ form.foreign_entity_number_search()|safe }} {{ form.foreign_entity_number_search_selection }} {{ form.foreign_entity_number_search_actual }} 
+        </div>
       </div>
-      <div class="col-sm">
-        {{ form.birthday }}
-      </div>
-    </div>
-
-    <div class="row g-2">
-      <div class="col-sm-3">
-        Vyhledávat údaje:
-      </div>
-      <div class="col-sm">
-        {{ form.person_actual_selection }}
-      </div>
-    </div>
-
 
   </p>
   <p><input type="submit" value="Search">
