update search by legal persons in a role

--- a/templates/results_persons.html
+++ b/templates/results_persons.html
@@ -116,6 +116,13 @@
             </tr>
 
             <tr>
+                <td><i>ve společnosti:</i></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            
+            <tr>
                 <td>Název subjektu:</td>
                 <td><b>{{ elem.nazev }}</b></td>
                 <td>IČO:</td>
